RESOLVED FIXED76540
Cross-platform processor core counter fix
https://bugs.webkit.org/show_bug.cgi?id=76540
Summary Cross-platform processor core counter fix
Roland Takacs
Reported 2012-01-18 07:11:49 PST
I forgot to add "OS(FREEBSD)" to "#if OS(DARWIN) || OS(OPENBSD) || OS(NETBSD)" thus I did it. Furthermore I removed the OS checking macros from ParallelJobsGeneric.cpp because the NumberOfCores.cpp contains them for counting CPU cores.
Attachments
fixed the preprocessor macros in NumberOfCores.cpp , and removed some OS checking macros from ParallelJobsGeneric.cpp (2.17 KB, patch)
2012-01-18 07:17 PST, Roland Takacs
no flags
Roland Takacs
Comment 1 2012-01-18 07:17:59 PST
Created attachment 122924 [details] fixed the preprocessor macros in NumberOfCores.cpp , and removed some OS checking macros from ParallelJobsGeneric.cpp
WebKit Review Bot
Comment 2 2012-01-18 10:10:46 PST
Comment on attachment 122924 [details] fixed the preprocessor macros in NumberOfCores.cpp , and removed some OS checking macros from ParallelJobsGeneric.cpp Clearing flags on attachment: 122924 Committed r105290: <http://trac.webkit.org/changeset/105290>
WebKit Review Bot
Comment 3 2012-01-18 10:10:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.