Cross-platform processor core counter fix https://bugs.webkit.org/show_bug.cgi?id=76540

Patch by Roland Takacs <takacs.roland@stud.u-szeged.hu> on 2012-01-18
Reviewed by Zoltan Herczeg.

I attached "OS(FREEBSD)" to "#if OS(DARWIN) || OS(OPENBSD) || OS(NETBSD)"
and I removed the OS checking macros from ParallelJobsGeneric.cpp because
the NumberOfCores.cpp contains them for counting CPU cores.
The processor core counter patch located at
https://bugs.webkit.org/show_bug.cgi?id=76530

* wtf/NumberOfCores.cpp:
* wtf/ParallelJobsGeneric.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@105290 bbb929c8-8fbe-4397-9dbb-9b2b20218538