third_party/WebKit/Source/JavaScriptCore/wtf/NumberOfCores.cpp
@@ -27,7 +27,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "NumberOfCores.h"
 
-#if OS(DARWIN) || OS(OPENBSD) || OS(NETBSD)
+#if OS(DARWIN) || OS(OPENBSD) || OS(NETBSD) || OS(FREEBSD)
 #include <sys/sysctl.h>
 #include <sys/types.h>
 #elif OS(LINUX) || OS(AIX) || OS(SOLARIS)
