third_party/WebKit/Source/JavaScriptCore/wtf/ParallelJobsGeneric.cpp
@@ -31,17 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #if ENABLE(THREADING_GENERIC)
 
 #include "ParallelJobs.h"
-#include "UnusedParam.h"
 #include <wtf/NumberOfCores.h>
-
-#if OS(DARWIN) || OS(OPENBSD) || OS(NETBSD)
-#include <sys/sysctl.h>
-#include <sys/types.h>
-#elif OS(LINUX) || OS(AIX) || OS(SOLARIS)
-#include <unistd.h>
-#elif OS(WINDOWS)
-#include <windows.h>
-#endif
 
 namespace WTF {
 
